# rivet

./: Cargo.toml  PROJECT.md  README.md
docs/: SPEC.md
src/: checks.rs  cli.rs  diff.rs  main.rs  report.rs
tests/: cli_report.rs
