[package]
name = "rivet"
version = "0.1.0"
edition = "2021"
description = "Patch intent verifier — checks git diffs for unrelated edits, secrets, missing tests, and drift"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
toml = "0.8"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
